UCL-434 Fix nav with left and right arrow; fix spacing for search input

--- a/src/components/Form/Select/MultiSelect/MultiSelect.module.scss
+++ b/src/components/Form/Select/MultiSelect/MultiSelect.module.scss
@@ -217,6 +217,8 @@ $listItemHeight: 2.5rem;
   color: var(--default);
   font-family: var(--font-family);
   line-height: 1.3333;
+  margin-left: 0.375rem;
+  padding: 0;
 
   &:focus-visible,
   &:focus {
